# tssp

./: .gitignore  API.md  ARCHITECTURE.md  AUTONOMOUS_PLAN.md  CHANGELOG.md  CLI.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  README.md  REFACTORING_GUIDE.md  SECURITY.md  agent_fixes.patch  tarpaulin-report.html
.cargo/: config.toml
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
coverage/: cobertura.xml  tarpaulin-report.html
crates/tssp/: Cargo.toml
crates/tssp-adapter-fs/: Cargo.toml
crates/tssp-adapter-fs/src/: lib.rs  workspace.rs
crates/tssp-adapter-sqlite/: Cargo.toml
crates/tssp-adapter-sqlite/src/: connection.rs  cursor.rs  folder_tests.rs  lib.rs  migrations.rs  notes.rs  query.rs  repository_tests.rs  sessions.rs
crates/tssp-adapter-system/: Cargo.toml
crates/tssp-adapter-system/src/: git.rs  lib.rs  lsp.rs  terminal.rs  terminal_security_tests.rs
crates/tssp-app/: Cargo.toml
crates/tssp-app/src/: audit.rs  delete.rs  folders.rs  git.rs  git_tests.rs  lib.rs  lsp.rs  notes.rs  pins.rs  sessions.rs  tags.rs  terminal.rs  terminal_tests.rs  upload.rs  workspace_files.rs
crates/tssp-app/src/upload/: tests.rs
crates/tssp-cli-core/: Cargo.toml
crates/tssp-cli-core/src/: exit_code.rs  lib.rs  output.rs
crates/tssp-domain/: Cargo.toml
crates/tssp-domain/src/: error.rs  file.rs  git.rs  hash.rs  lib.rs  lsp.rs  note.rs  pagination.rs  search_query.rs  session.rs  tag.rs  terminal.rs  text.rs  time.rs  user.rs
crates/tssp-ports/: Cargo.toml
crates/tssp-ports/src/: blob.rs  clock.rs  errors.rs  git.rs  id.rs  lib.rs  lsp.rs  query.rs  record.rs  repository.rs  session.rs  terminal.rs  workspace.rs
crates/tssp/src/: admin.rs  backend.rs  config.rs  copy.rs  cp.rs  discovery.rs  info.rs  init.rs  lib.rs  list.rs  login.rs  logout.rs  main.rs  note.rs  paste.rs  pins.rs  pull.rs  receive.rs  remove.rs  search.rs  send.rs  sessions_helper.rs  share.rs  status.rs  tags.rs  upload.rs  whoami.rs  workspace.rs
crates/tsspd/: Cargo.toml
crates/tsspd/assets/web/: app.css  app.js  index.html  manifest.webmanifest  sw.js
crates/tsspd/assets/web/css/: base.css  components.css  layout.css  mobile.css  product.css  tokens.css  views.css
crates/tsspd/assets/web/js/: admin.js  api.js  app.js  editor.js  files.js  notes.js  pro.js  state.js  upload.js  views.js
crates/tsspd/assets/web/js/features/: command_palette.js  media.js  overview.js  public.js  search.js  workspaces.js
crates/tsspd/assets/web/js/ui/: dialogs.js  format.js  render.js  toast.js
crates/tsspd/src/: admin_telemetry.rs  chunked_upload.rs  concurrency_tests.rs  config.rs  content.rs  delete.rs  edge_cases_tests.rs  error_handler.rs  error_handling_tests.rs  file.rs  file_ops.rs  folders.rs  garbage_collection.rs  git_status.rs  http_error.rs  integrity.rs  lib.rs  list.rs  lsp.rs  lsp_ws.rs  main.rs  mdns.rs  metrics.rs  move_file.rs  performance_tests.rs  pins.rs  public_api.rs  public_link_tests.rs  public_sessions.rs  qr.rs  rate_limit.rs  rename.rs  router.rs  runner.rs  safe_console.rs  search.rs  search_tests.rs  sessions.rs  settings.rs  share.rs  (+21 more)
crates/tsspd/src/admin/: backup.rs  console.rs  editor.rs  handlers.rs  mod.rs  sessions.rs  system.rs  users.rs
crates/tsspd/src/auth/: context.rs  devices.rs  handlers.rs  integration_tests.rs  local_network.rs  middleware.rs  mod.rs  service.rs  store.rs  users.rs  users_test.rs
crates/tsspd/src/http_tests/: auth.rs  chunked_upload.rs  common.rs  files.rs  folders.rs  imports.rs  mod.rs  pins.rs  tags.rs  trash.rs  upload.rs
crates/tsspd/src/notes/: error.rs  handlers.rs  mod.rs  provider.rs  query.rs  response.rs  tests.rs  validate.rs
crates/tsspd/src/web/: assets.rs  mod.rs  tests.rs
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CLI.md  CONFIGURATION.md  DEVELOPMENT.md  FEATURE_CHECKLIST.md  INSTALL.md  ROADMAP.md  ROADMAPWEB.md  WEBROADMAP.md  features.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: api.ts  responsive.css  router.ts  tokens.css
frontend/src/lib/__tests__/: workspaceFS.test.ts
frontend/src/lib/api/: admin.ts  auth.ts  drive.ts  index.ts  notes.ts  shared.ts  workspace.ts
frontend/src/lib/blocks/: editorStore.ts  history.ts  index.ts  slashCommands.ts  templates.ts  types.ts  utils.ts
frontend/src/lib/components/: AppDialog.svelte  Avatar.svelte  Badge.svelte  Banner.svelte  Bar.svelte  Breadcrumb.svelte  Btn.svelte  Button.svelte  Card.svelte  CodeEditor.svelte  ColorPicker.svelte  CommandPalette.svelte  ContextMenu.svelte  DeviceManager.svelte  Dock.svelte  EmptyState.svelte  ErrorState.svelte  FileExplorer.svelte  FileGrid.svelte  FileIcon.svelte  FilePreviewModal.svelte  FileThumb.svelte  FindReplaceWidget.svelte  FindWidget.svelte  FolderTree.svelte  FormInput.svelte  Kbd.svelte  KeyboardHelpModal.svelte  LoadingState.svelte  MarkdownPreview.svelte  Modal.svelte  MonacoEditor.svelte  NoteEditor.svelte  NotesList.svelte  NotificationCenter.svelte  Outline.svelte  Pill.svelte  PreviewDialog.svelte  ProfileMenu.svelte  ProgressBar.svelte  (+27 more)
frontend/src/lib/constants/: colors.ts
frontend/src/lib/notes/: markdown.test.ts  markdown.ts  slashCommands.ts  tree.ts
frontend/src/lib/services/: appConfigService.ts  chunkedUploadService.ts  driveService.ts  driveStateService.ts  driveWorkspaceIntegration.ts  fileService.ts  imageThumbnailService.ts  keyboardService.ts  notesService.ts  previewService.ts  searchService.ts  sharingService.ts  uploadChunk.ts  uploadEventService.ts  uploadPersistence.ts  workspaceFileManager.ts  workspacePlugins.ts  workspaceSearchService.ts  workspaceService.ts
frontend/src/lib/stores/: auth.ts  clipboard.ts  dialog.ts  drive.ts  navigation.ts  (+9 more)
frontend/src/shell/: router.ts
frontend/tests/: setup.ts
frontend/tests/e2e/: drive-smoke.spec.ts  shell.spec.ts
frontend/tests/support/: helpers.ts
scripts/: run-tssp.sh
(+167 files in other folders)
