[workspace]
members = [
    "crates/tssp-adapter-fs",
    "crates/tssp-adapter-sqlite",
    "crates/tssp-adapter-system",
    "crates/tssp-app",
    "crates/tssp-cli-core",
    "crates/tssp-domain",
    "crates/tssp-ports",
    "crates/tssp",
    "crates/tsspd",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tunar-ssp/tssp"
homepage = "https://github.com/Tunar-ssp/tssp"
description = "Self-hosted transfer and storage system for local networks"
readme = "README.md"
authors = ["TSSP contributors"]

[workspace.dependencies]
axum = { version = "0.8", features = ["json", "tokio"] }
base64 = "0.22"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
clap_mangen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
getrandom = "0.2"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = "0.5"
unicode-normalization = "0.1"
uuid = { version = "1.11", features = ["v7"] }

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unused_extern_crates = "warn"

[workspace.lints.clippy]
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
todo = "deny"
unwrap_used = "deny"
