[workspace]
members = [
    "crates/tssp-adapter-fs",
    "crates/tssp-adapter-sqlite",
    "crates/tssp-adapter-system",
    "crates/tssp-app",
    "crates/tssp-cli-core",
    "crates/tssp-domain",
    "crates/tssp-ports",
    "crates/tssp",
    "crates/tsspd",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.93"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tunar-ssp/tssp"
homepage = "https://github.com/Tunar-ssp/tssp"
description = "Self-hosted transfer and storage system for local networks"
readme = "README.md"
authors = ["TSSP contributors"]

[workspace.dependencies]
axum = { version = "0.8", features = ["json", "multipart", "tokio", "ws"] }
arboard = "3.4"
base64 = "0.22"
blake3 = "1.5"
git2 = { version = "0.20", default-features = false }
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.5"
clap_mangen = "0.2"
qrcode = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
getrandom = "0.2"
tempfile = "3.10"
thiserror = "2.0"
time = { version = "0.3", features = ["local-offset", "parsing"] }
tokio = { version = "1.45", features = ["macros", "net", "rt-multi-thread", "signal", "fs", "io-util", "process"] }
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
unicode-normalization = "0.1"
uuid = { version = "1.11", features = ["v7"] }
tracing = "0.1"
nix = { version = "0.29", features = ["process", "term"] }
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace", "set-header"] }
figment = { version = "0.10", features = ["env", "toml"] }
mdns-sd = "0.11"
local-ip-address = "0.6"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
unused_extern_crates = "warn"

[workspace.lints.clippy]
expect_used = "warn"
pedantic = { level = "warn", priority = -1 }
todo = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

