[package]
name = "tssp-adapter-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Filesystem blob storage adapter for TSSP"

[dependencies]
blake3.workspace = true
tokio.workspace = true
tracing.workspace = true
tssp-domain = { path = "../tssp-domain" }
tssp-ports = { path = "../tssp-ports" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
