[package]
name = "tssp-adapter-system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "System clock, UUID, and random token adapters for TSSP"

[dependencies]
async-trait = "0.1"
base64.workspace = true
getrandom.workspace = true
tokio = { workspace = true, features = ["process", "rt", "sync"] }
tssp-domain = { path = "../tssp-domain" }
tssp-ports = { path = "../tssp-ports" }
uuid.workspace = true
which = "6.0"

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
