[package]
name = "tssp-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Application services for TSSP use cases"

[dependencies]
async-trait = "0.1"
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tssp-domain = { path = "../tssp-domain" }
tssp-ports = { path = "../tssp-ports" }
uuid = { workspace = true, features = ["v4"] }
tracing.workspace = true

[dev-dependencies]
tssp-adapter-sqlite = { path = "../tssp-adapter-sqlite" }
tssp-adapter-system = { path = "../tssp-adapter-system" }
tssp-domain = { path = "../tssp-domain" }

[lints]
workspace = true
