[package]
name = "tssp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command line client for TSSP"

[dependencies]
clap.workspace = true
clap_complete.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tssp-cli-core = { path = "../tssp-cli-core" }

[lints]
workspace = true
