[package]
name = "tssp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command line client for TSSP"

[dependencies]
arboard.workspace = true
clap.workspace = true
clap_complete.workspace = true
image = "0.25.10"
qrcode.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
time.workspace = true
tssp-cli-core = { path = "../tssp-cli-core" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
