[package]
name = "tsspd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TSSP backend daemon"

[dependencies]
axum.workspace = true
clap.workspace = true
serde.workspace = true
tempfile.workspace = true
tokio.workspace = true
tssp-adapter-fs = { path = "../tssp-adapter-fs" }
tssp-adapter-sqlite = { path = "../tssp-adapter-sqlite" }
tssp-adapter-system = { path = "../tssp-adapter-system" }
tssp-app = { path = "../tssp-app" }
tssp-domain = { path = "../tssp-domain" }
tssp-ports = { path = "../tssp-ports" }

[dev-dependencies]
serde_json.workspace = true
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
