[package]
name = "tsspd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TSSP backend daemon"

[dependencies]
async-trait = "0.1"
axum.workspace = true
blake3.workspace = true
clap.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rustix = { version = "0.38", features = ["fs"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tokio-util = { workspace = true, features = ["io"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
tssp-adapter-fs = { path = "../tssp-adapter-fs" }
tssp-adapter-sqlite = { path = "../tssp-adapter-sqlite" }
tssp-adapter-system = { path = "../tssp-adapter-system" }
tssp-app = { path = "../tssp-app" }
tssp-domain = { path = "../tssp-domain" }
tssp-ports = { path = "../tssp-ports" }
bcrypt = "0.16"
getrandom.workspace = true
base64.workspace = true
thiserror.workspace = true
figment.workspace = true
mdns-sd.workspace = true
local-ip-address.workspace = true
uuid.workspace = true
qrcode.workspace = true
which = "5.0"

[dev-dependencies]
serde_json.workspace = true
tower = { workspace = true, features = ["util"] }
axum = { workspace = true }

[lints]
workspace = true
